--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,4 @@
-# Site settings
-title: Modern Blog
-description: Modern-Blog A Elegant template for Jekyll
-keywords: Modern, Blogging, Fun
-author: Wferr
-baseurl: "" # the subpath of your site, e.g. /blog/
-url: "" # the base hostname & protocol for your site
+name: Arcana
+description: Arcana template for Jekyll
+paginate: 10
+baseurl: '/Arcana-Jekyll-Theme'
