--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ gems:
   - jemoji
   
 # Site settings
-title: "Mediator"
+title: "Just、king"
 description: > # this means to ignore newlines until "email:"
    A Jekyll theme - Medium inspired
 
