--- a/_config.yml
+++ b/_config.yml
@@ -5,9 +5,9 @@ gems:
   - jemoji
   
 # Site settings
-title: "Just、king"
+title: "just、king"
 description: > # this means to ignore newlines until "email:"
-   A Jekyll theme - Medium inspired
+   just、king的博客
 
 email: a-mail@mail.mail
 #blog logo
